# tw_stock_tool

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ai_prediction_report.py  ai_stock_scanner.py  ai_walk_forward.py  analysis.py  analysis_session.py  app_services.py  backtest.py  backtest_report.py  baseline_ml_model.py  benchmark.py  cache_manager.py  cache_utils.py  clean_stocks.py  config.py  console_lock.py  daily_report.py  daily_watchlist.py  data_loader.py  doctor.py  gui_app.py  gui_result_formatter.py  gui_tasks.py  indicators.py  main.py  ml_dataset.py  parameter_sweep.py  parameter_sweep_report.py  plotter.py  pr_body.json  pr_body_clean.md  price_data_smoke_check.py  pyproject.toml  report.py  requirements.txt  scan_stocks.py  scanner.py  (+11 more)
docs/: ALTERNATE_BACKTEST_ADAPTER_DECISION.md  ALTERNATE_BACKTEST_REPLACEMENT_API_MAPPING.md  AUTO_TRADING_SAFETY.md  BACKTEST_ARCHITECTURE_TRACK_A_CLOSEOUT.md  BACKTEST_COMPATIBILITY_CONTRACT.md  BACKTEST_DEPRECATION_EVIDENCE.md  BACKTEST_RETENTION_POLICY.md  CLI_RUNTIME_CONTRACT_INVENTORY.json  DAILY_REPORT_MVP.md  DATA_PROVIDER_CACHE_BOUNDARY_CONTRACT.md  DATA_RELIABILITY_AUDIT.md  DEVELOPMENT_ROADMAP.md  DUPLICATE_BACKTEST_PATH_DECISION.md  PONYTAIL_REPOSITORY_AUDIT.md  PUBLIC_API_AND_WRAPPER_INVENTORY.md  REPOSITORY_ARCHITECTURE_REVIEW.md  SIGNAL_STANDARD.md  SIMULATED_PAPER_TRADING_RUNTIME_ARCHITECTURE.md  TRACK_C10_1_SIMULATED_PAPER_TRADING_EXPORT_CLI_RUNTIME_EXIT_BEHAVIOR_CHARACTERIZATION.md  TRACK_C10_2_SIMULATED_PAPER_TRADING_EXPORT_CLI_RUNTIME_EXIT_FIX.md  TRACK_C11_1_BACKTEST_ARTIFACT_CLI_RUNTIME_EXIT_BEHAVIOR_CHARACTERIZATION.md  TRACK_C11_2_BACKTEST_ARTIFACT_CLI_RUNTIME_EXIT_FIX.md  TRACK_C12_1_BACKTEST_RESULT_EXPORT_CLI_RUNTIME_EXIT_BEHAVIOR_CHARACTERIZATION.md  TRACK_C12_2_BACKTEST_RESULT_EXPORT_CLI_RUNTIME_EXIT_FIX.md  TRACK_C13_REPOSITORY_WIDE_CLI_RUNTIME_CONTRACT_AUDIT.md  TRACK_C14_BATCH_B_FALSE_SUCCESS_RUNTIME_FIX.md  TRACK_C15_BATCH_A_RETURN_CODE_NORMALIZATION.md  TRACK_C1_RESEARCH_CORRECTNESS_CHARACTERIZATION.md  TRACK_C2_1_ML_HORIZON_LEAKAGE_FIX.md  TRACK_C2_2_RSI_EDGE_CASE_FIX.md  (+34 more)
(+246 files in other folders)
