[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-stock-tool"
version = "0.1.0"
description = "Taiwan stock technical analysis and research CLI tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2,<0.3",
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<3.0",
    "matplotlib>=3.8,<4.0",
    "mplfinance>=0.12,<0.13",
    "openpyxl>=3.1,<4.0",
    "requests>=2.31,<3.0",
    "scikit-learn>=1.3,<2.0",
]

[project.scripts]
twstock = "tw_stock_tool.cli.twstock_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tw_stock_tool*"]
